gcc/testsuite/g++.old-deja/g++.mike/eh54.C
// { dg-do assemble  }
// { dg-options "-fexceptions" }

int main() { try { 1; } }	// { dg-error "" } 
